@@ -125,7 +125,7 @@ void TIL::run( Session* session, const std::string& a ){
       // Get our tile using our tile manager
       TileManager tilemanager( session->tileCache, *session->image, session->jpeg, session->logfile, session->loglevel );
       RawTile rawtile = tilemanager.getTile( resolution, n, session->view->xangle,
-					     session->view->yangle, JPEG );
+					     session->view->yangle, session->view->layers, JPEG );
 
       int len = rawtile.dataLength;
 
