@@ -95,9 +95,10 @@ class TPTImage : public IIPImage {
   /** \param x horizontal sequence angle
       \param y vertical sequence angle
       \param r resolution
+      \param l quality layers
       \param t tile number
    */
-  RawTile getTile( int x, int y, unsigned int r, unsigned int t ) throw (std::string);
+    RawTile getTile( int x, int y, unsigned int r, int l, unsigned int t ) throw (std::string);
 
 
 };
